<resources>
    <string name="app_name">TWG</string>
    <string name="Add">Add</string>
    <string name="Export">Export</string>
    <string name="Alerts">ALERTS</string>
    <string name="BatteryStatus">Battery Status</string>
    <string name="CallScheduleService">Call to Schedule Service</string>
    <string name="CallService">Call Service</string>
    <string name="Cancel">Cancel</string>
    <string name="CarMax">CarMax</string>
    <string name="Diagnostics">Diagnostics</string>
    <string name="DiagnosticsTroubleCodeDetails">DIAGNOSTICS TROUBLE CODE DETAILS</string>
    <string name="DiagnosticsTroubleCodes">DIAGNOSTICS TROUBLE CODES</string>
    <string name="Done">Done</string>
    <string name="DTCsReported">DTC\'s Reported</string>
    <string name="DTCStatus">DTC Status</string>
    <string name="EngineTemp">Engine Temp</string>
    <string name="EnterOtherLocationInfo">Enter Other Location Info</string>
    <string name="EnterOtherTypeInfo">Enter Other Type Info</string>
    <string name="EnterServiceCompletion">Enter Service Completion Info</string>
    <string name="ExitMessage">Do you want to exit TWG</string>
    <string name="ExitTitle">Exit TWG</string>
    <string name="Facilities">Facilities</string>
    <string name="FindMechanic">Find a Mechanic</string>
    <string name="GatheringDiagnosticInformation">Gathering diagnostic information...</string>
    <string name="LogFor">LOG FOR:</string>
    <string name="MilageAtService">Milage At Service:</string>
    <string name="NextServiceIn">Next Service In: </string>
    <string name="No">No</string>
    <string name="NoIssues">No Issues</string>
    <string name="MissingFieldsErrorMsg">Missing data, please enter data for all fields</string>
    <string name="Other">Other</string>
    <string name="RecallUpdate">RECALL UPDATE!</string>
	<string name="ReplaceEvery">Replace Every</string>
    <string name="RetrievingMapData">Retrieving Map Data</string>
	<string name="Service">Service</string>
	<string name="ServiceLocation">Service Location:</string>
    <string name="ServiceLog">Service Log</string>
	<string name="ServiceType">Service Type:</string>
    <string name="Updated">Updated</string>
    <string name="UrgentIssues">Urgent Issues</string>
    <string name="VehicleInformation"><b>VEHICLE INFORMATION</b></string>
    <string name="VehicleConditionAsOf">VEHICLE CONDITION AS OF</string>
    <string name="ViewServiceLog">View Service Log</string>
    <string name="Yes">Yes</string>
    <string name="YourVehicleHealthCheck">YOUR VEHICLE HEALTH CHECK</string>
    <string name="action_settings">Settings</string>
    <string name="frag1_text">Fragment 1</string>
    <string name="frag2_text">Fragment 2</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="stack">add to Back Stack</string>
    <string name="checkbox1_title">CheckBox 1</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="edittext1_title">EditText 1</string>
    <string name="edittext1_summary">Summary of EditText 1</string>
    <string name="list1_title">List 1</string>
    <string name="list1_summary">Summary of List 1</string>
    <string-array name="entries">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="harsh_accel">
<![CDATA[ 
	    <h5><font color="#000000">Harsh Acceleration</font></h5>
<h6><font color="#000000">Pushing the pedal to the metal is not good for your car or safety!</font></h6>
<p><font color="#000000">Never stomp on the gas pedal when accelerating this can lead to tire spin and possible loss of control.  Accelerating at a smoother rate may get you to your desired speed a little more slowly, but it can save you at the gas pump.<p></font> 
<p><font color="#000000">Smooth acceleration is also much more important in more powerful cars as there is a greater likelihood of wheel-spin.<p></font>
	      ]]>
    </string>
    <string name="distracted_driving">
<![CDATA[ 
	    <h5><font color="#000000">Distracted Driving</font></h5>
<p><font color="#000000"><b>Driver distraction is a leading cause of traffic crashes,</b> responsible for about 80 percent of all collisions, according to the National Highway Traffic Safety Administration. Cell phones are the #1 driver distraction, contributing to thousands of crashes and deaths each year.<p></font> 
<p><font color="#000000">Talking on cell phones distracts our minds from driving.  Distraction does not simply involve where our eyes and hands are while driving.<p></font>
<p><font color="#000000">Cell phone conversations can take our minds off the task of driving.  This is called cognitive distraction, and this is why hands-free and handheld phones have a similar crash risk - hands-free devices are not safer! In fact, a University of Utah study found that drivers using a cell phone had a slower reaction time than drivers with a BAC of .08, the legal limit.<p></font>
	      ]]>
    </string>
    <string name="speeding">
<![CDATA[ 
	    <h5><font color="#000000">Speeding</font></h5>
<p><font color="#000000"><b>Speeding is involved in about one out of three fatal crashes,</b> according to the National Highway Traffic Safety Administration.<p></font> 
<p><font color="#000000">While injuries and fatalities due to other dangerous behaviors, such as driving while impaired and not wearing seat-belts, have been significantly reduced, <b>speeding is still a challenge.</b><p></font>
<p><font color="#000000">NHTSA defines a crash as speeding-related if the driver was charged with a speeding-related offense or if an officer indicated that racing, driving too fast for conditions, or exceeding the posted speed limit contributed to the crash.<p></font>
	    <h6>Speeding results in:</h6>
<p><font color="#000000">•	Lives Lost - over 13,000 each year.<p></font>
<p><font color="#000000">•	Work zone crashes and fatalities - speed was a factor in 27 percent of fatal crashes in construction and maintenance zones in 2005.<p></font>
<p><font color="#000000">•	Unsafe school zones - compliance with lower speed limits is poor.<p></font>
<p><font color="#000000">•	Economic costs - speeding-related crashes cost society over $40 billion annually, according to NHTSA.  Every minute "gained" by speeding to a destination costs U.S. society over $76,000.<p></font>
	    
	      ]]>
    </string>
    <string name="harsh_braking">
<![CDATA[ 
	    <h5><font color="#000000">Harsh Braking / Tailgating</font></h5>
<p><font color="#000000"><b>Are you following other drivers to close?</b> Keeping a safe following distance is an easy way to help limit your harsh braking events.<p></font> 
<p><font color="#000000">This is an easy behavior to implement but still the most commonly broken rule of defensive driving.<p></font>
<p><font color="#000000">Even if you follow every other defensive driving technique, you can\'t possibly be a safe driver unless you follow this rule each time you drive. If you keep your distance from other drivers, you will almost always have an escape route, or will be able to take some sort of evasive action with ease.<p></font> 
<p><font color="#000000">At higher speeds this rule become more imperative to your safety.  You can greatly reduce your risk of collision by maintaining a large enough following distance.<p></font> 
<p><font color="#000000">At a <b>MINIMUM,</b> during dry weather conditions, you should have at least 2 seconds of space between you and the vehicle in front of you (3 seconds is better).  Do this by using a fixed object such as a bridge, tree, or even a crack or shadow in the roadway. Once the rear bumper of the vehicle in front of you crosses that object, begin to count... one-thousand one, one-thousand, two, one-thousand three, etc.  If you don\'t make it to 2 by the time your front bumper crosses the same object, you need to increase the following distance.  Of course, being further away than 3 seconds isn\'t only acceptable, it\'s recommended.<p></font>
	      ]]>
    </string>
    <string name="use_of_speed">
<![CDATA[ 
	    <h3><u>Use of Speed</u></h3>
<p><font color="#000000"><b>Higher scores are better.</b> A score of 100% means that the driver uses appropriate speed across all road conditions and times of day.<p></font> 
<p><font color="#000000">The pace score is a measure of how well the driver uses appropriate speed for the road being driven on.<p></font>
<p><font color="#000000">The score is generated by comparing the driver’s pace values to those of an advanced driver, across each road category.<p></font> 
<p><font color="#000000"><b>What does this test mean?</b> Drivers who are observed to drive at a statistically signiﬁcantly diﬀerent speed than an advanced driver will receive a lower pace score.<p></font> 
<p><font color="#000000">Drivers who maintain an appropriate pace for the road and conditions will score more highly. The pace score will be reduced if a driver, on average, drives too quickly ‘or too slowly’. The road category, road geometry, general surroundings and distance driven on each road type are all considered when calculating the pace score.<p></font>
<p><font color="#000000">The pace score should not be used in isolation when identifying drivers in need of advice or training.<p></font>
<p><font color="#000000">Drivers with low pace scores might be driving too quickly, or be more cautious than necessary. You should cross-reference the pace score with the road category analysis, and identify road categories where they
drive too quickly (high) or too slowly (low) in each of the pace elements.<p></font>
	      ]]>
    </string>
    <string name="anticipation">
<![CDATA[ 
	    <h3><u>Anticipation</u></h3>
<p><font color="#000000"><b>Higher scores are better:</b> A score of 100% means that the driver demonstrates high anticipation by altering their speed in a controlled and moderate way; they plan their changes in speed using advanced driving techniques.<p></font>
<p><font color="#000000">The anticipation score is a measure of the level of forward planning the driver exhibits. The score is generated by comparing the driver’s speed changes in response to road hazards and other vehicles with the speed changes of an advanced driver.<p></font>
<p><font color="#000000">If a driver anticipates the approaching road conditions and other road traﬃc there should never be a need to brake sharply. Braking while cornering puts the vehicle out of balance and can cause skidding due to reduced grip.<p></font>
<p><font color="#000000">Advanced drivers show the highest levels of anticipation on average. Young and inattentive drivers exhibit statistically lower levels of anticipation.<p></font>
<p><font color="#000000"><b>What does this mean?</b> Moderate and timely braking ahead of junctions and corners increases the anticipation score. Braking while cornering, braking hard at junctions or braking hard while in traﬃc reduces the anticipation score.<p></font>
	      ]]>
    </string>
    <string name="Date">Date</string>
    <string name="Select">Select</string>
    <string name="Location">Location</string>
    <string name="Milage">Milage</string>
    <string name="FuelLevel">Fuel Level</string>
    <string name="Battery">Battery</string>
    <string name="FuelCapacity">Fuel Capacity</string>
    <string name="FuelPercentage">Fuel Percentage</string>
    <string name="LastTripFuelEconomy">Last Trip Fuel Economy</string>
    <string name="FuelEconomyLast30Days">Fuel Economy Last 30 Days</string>
    <string name="FuelUsedLast30Days">Fuel Used Last 30 Days</string>
</resources>