<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ubi="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- =================== -->
    <!-- Vehicle Information -->
    <!-- =================== -->

    <LinearLayout
        android:id="@+id/llVehicleSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#E0E0E0"
        android:orientation="vertical" >

        <!-- Fuel Level -->

        <LinearLayout
            android:id="@+id/llFuelLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/FuelLevel"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:id="@+id/tvFuelLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="right"
                android:text="4.5 Gallons"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />
        </LinearLayout>

        <!-- Battery -->

        <LinearLayout
            android:id="@+id/llBattry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/Battery"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:id="@+id/tvBattry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="95%"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />
        </LinearLayout>

        <!-- Engine Temp. -->

        <LinearLayout
            android:id="@+id/llEngineTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/EngineTemp"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:id="@+id/tvEngineTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="240 F"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />
        </LinearLayout>

        <!-- Fuel Capacity -->

        <LinearLayout
            android:id="@+id/llFuelCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/FuelCapacity"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:id="@+id/tvFuelCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="9.3 Gallons"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />
        </LinearLayout>

        <!-- Fuel Percentage -->

        <LinearLayout
            android:id="@+id/llFuelPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/FuelPercentage"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:id="@+id/tvFuelPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="83%"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />
        </LinearLayout>

        <!-- Last Trip Fuel Economy -->

        <LinearLayout
            android:id="@+id/llLastTripFuelEconomy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/LastTripFuelEconomy"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:id="@+id/tvLastTripFuelEconomy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="42.4 MPG"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />
        </LinearLayout>

        <!-- Fuel Economy Last 30 Days -->

        <LinearLayout
            android:id="@+id/llFuelEconomyLast30Days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/FuelEconomyLast30Days"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:id="@+id/tvFuelEconomyLast30Days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="44.4 MPG"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />
        </LinearLayout>

        <!-- Fuel Used Last 30 Days -->

        <LinearLayout
            android:id="@+id/llFuelUsedLast30Days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/FuelUsedLast30Days"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />

            <com.modusgo.ubi.customviews.TypefacedTextView
                android:id="@+id/tvFuelUsedLast30Days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="44.4 MPG"
                android:textColor="#00AEEF"
                android:textSize="12.5sp"
                ubi:typeface="EncodeSansNormal-300-Light.ttf" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>